# CongestionFRR-FYP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_ns3.sh  setup.sh  single_band_experiment.sh  test_suite.sh
.github/workflows/: ns3-compile.yml
analysis/: __main__.py  discovery.py  generator.py  graph.py  metrics.py  pcap.py  scenario.py  sequence_plot.py  statistic.py
analysis/trace_analyzer/: analyzer.py
experiments/: bandwidth_alternate.json  bandwidth_primary.json  base_setting.json  basic_test.json  big_tcp.json  delay_alternate.json  sextuple_flow_delay_big_queue.json  triple_flow.json  triple_flow_bandwidth_alternate.json  triple_flow_congestion_pattern.json  triple_flow_delay.json  triple_flow_delay_big_queue.json  triple_flow_delay_big_queue_later_udp.json  triple_flow_delay_scaled_big_queue.json  triple_flow_udp_off_time.json
experiments/delay_alternate/: large_queue.json  vanilla.json
experiments/reroute_per_flow/: triple_flow_delay_big_queue.json  (+1 more)
libs/: basic_congestion.h  empty_head_reroute.h  frr_queue.h  frr_queue_base.h  head_reroute_policy.h  lfa_policy.h  point_to_point_frr_helper.h  point_to_point_frr_net_device.h  reroute_flow_policy.h  safe_head_reroute.h  safe_tail_reroute.h  tcp-tx-buffer.cc
libs/random/: random.hpp
pcap_analysis/: single_band_pcap.py
run_configs/: delay_alternate.json
src/: combined-baseline-no-udp.cc  combined-baseline-udp.cc  combined-frr-no-udp.cc  combined-frr.cc  simulation.cc
tests/: test_no_congestion_no_rerouting.py  test_rerouting_head.py  utils.py
(+134 files in other folders)
